--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^10.8.1",
     "@react-native-firebase/auth": "^10.8.1",
     "@react-native-firebase/firestore": "^10.8.1",
+    "@react-native-firebase/storage": "^10.8.1",
     "@react-native-masked-view/masked-view": "^0.2.2",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
@@ -20,6 +21,7 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^3.2.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.18.0",
