--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-firebase/app": "^10.8.1",
     "@react-native-firebase/auth": "^10.8.1",
     "@react-native-firebase/firestore": "^10.8.1",
